# locoprop-torch

./: .gitignore  README.md  locoprop.py  locoprop_orig.ipynb  pyproject.toml
locoprop/: __init__.py  layer.py  trainer.py
test/: autoencoder.py  backprop.py  convnet.py
